<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_64dp"
        android:id="@+id/tv_install"
        android:clickable="true"
        android:text="@string/install_app"
        android:gravity="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/colorGamePrimary"
        android:visibility="gone"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#afafaf">
    </View>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_64dp"
        android:id="@+id/tv_delete_task"
        android:clickable="true"
        android:text="@string/clear_task_records"
        android:gravity="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#000000"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#afafaf">
    </View>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_64dp"
        android:id="@+id/tv_cancel"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/cancel"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#000000"/>
</LinearLayout>