<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="150dp"
    android:paddingStart="@dimen/dimen_20dp"
    android:paddingEnd="@dimen/dimen_20dp"
    android:background="@drawable/dialog_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#333333"
        android:id="@+id/tv_app_name"
        android:layout_gravity="center"
        android:text="hello"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#333333"
        android:layout_gravity="center"
        android:text="@string/uninstall_or_not"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#999999"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:paddingEnd="26dp"
            android:id="@+id/tv_cancel"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#68ba3b"
            android:layout_gravity="center"
            android:text="@string/ok"
            android:paddingStart="26dp"
            android:id="@+id/tv_uninstall"/>
    </LinearLayout>
</LinearLayout>