<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="290dp"
    android:layout_height="match_parent">
    <ImageView
        android:src="@drawable/menu_top"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:paddingTop="@dimen/dimen_16dp">
    </ImageView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48dp"
        android:orientation="horizontal"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/rv_install_records">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/download_manager"
            android:id="@+id/iv_install_icon"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_manager"
            android:textSize="16sp"
            android:textColor="#1a1a1a"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:layout_toEndOf="@id/iv_install_icon"
            android:layout_centerVertical="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="64dp"
        android:background="#afafaf" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48dp"
        android:orientation="horizontal"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/rv_uninstall">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/uninstall_icon"
            android:id="@+id/iv_uninstall_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_manager"
            android:textSize="16sp"
            android:textColor="#1a1a1a"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:layout_toEndOf="@id/iv_uninstall_icon"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="64dp"
        android:background="#afafaf" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48dp"
        android:orientation="horizontal"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/rv_app_update">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/updateicon"
            android:id="@+id/iv_update_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/installed_app_update"
            android:textSize="16sp"
            android:textColor="#1a1a1a"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:layout_toEndOf="@id/iv_update_icon"
            android:layout_centerVertical="true"/>

        <ImageView
            android:layout_width="@dimen/dimen_11dp"
            android:layout_height="@dimen/dimen_20dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="64dp"
        android:background="#afafaf" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48dp"
        android:orientation="horizontal"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/rv_check_update">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/checkupdate_icon"
            android:id="@+id/iv_check_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_update"
            android:textSize="16sp"
            android:textColor="#1a1a1a"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:layout_toEndOf="@id/iv_check_icon"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/iv_update_flag"
            android:layout_width="@dimen/dimen_10dp"
            android:layout_height="@dimen/dimen_10dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:src="@drawable/update_flag"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="64dp"
        android:background="#afafaf" />
</LinearLayout>