<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/appcenter_item_selector"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_app_info_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants">

        <!-- 应用icon -->
        <ImageView
            android:id="@+id/iv_app_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/image_default" />

        <TextView
            android:id="@+id/tv_update"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/appcenter_state_btn_height"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:minWidth="@dimen/appcenter_state_btn_width"
            android:padding="3dp"
            android:background="@drawable/app_detail_btn"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/appcenter_appcenter_update_text"
            android:textColor="#ffffff"
            android:textSize="@dimen/appcenter_state_btn_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/iv_app_icon"
            android:layout_toStartOf="@id/tv_uninstall"
            android:orientation="vertical">
            <!-- 应用的名称 -->
            <TextView
                android:id="@+id/tv_app_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="TestApp"
                android:textColor="#1a1a1a"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_old_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="v1.2.0"
                    android:textColor="#808080"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="2dp"
                    android:text="->"/>
                <!-- 应用的大小 -->

                <TextView
                    android:id="@+id/tv_new_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="v1.2.1"
                    android:textColor="#808080"
                    android:textSize="10sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_app_info_area"
                android:layout_marginTop="6dp">
                <!-- 版本更新说明 -->
                <net.bat.store.widget.UpdateDescriptionView
                    android:id="@+id/update_description_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp" />
                <!-- ignore按钮 -->
                <LinearLayout
                    android:id="@+id/ignore_update_btn_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/appcenter_bt_ignore_selector"
                    android:gravity="center"
                    android:minWidth="@dimen/appcenter_state_btn_width"
                    android:orientation="horizontal"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ignore_icon" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="4dp"
                        android:text="@string/appcenter_apps_update_operation_ignore"
                        android:textColor="#68ba3b"
                        android:textSize="10sp" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="86dp"
        android:background="#afafaf"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>